--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.8.0",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.3.9"
+    "typeorm": "^0.3.9",
+    "zod": "^3.19.1"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.2",
