--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "api",
   "version": "1.0.0",
   "description": "",
-  "main": "source/server.ts",
+  "main": "dist/index.js",
   "scripts": {
-    "dev": "ts-node-dev src/app.ts",
+    "test": "jest",
+    "dev": "ts-node-dev src/index.ts",
     "build": "rm -rf /dist && tsc",
-    "start": "npm run build && node dist/app.js"
+    "start": "npm run build && node dist/index.js"
   },
   "author": "",
   "license": "ISC",
@@ -25,15 +26,20 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
-    "@types/cors": "^2.8.12",
-    "@types/helmet": "^4.0.0",
-    "@types/jsonwebtoken": "^8.5.9",
     "@types/body-parser": "^1.19.2",
+    "@types/cors": "^2.8.12",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
+    "@types/helmet": "^4.0.0",
+    "@types/jest": "^29.0.2",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.7.16",
     "@types/pg": "^8.6.5",
+    "@types/supertest": "^2.0.12",
     "dotenv": "^16.0.2",
+    "jest": "^29.0.3",
+    "supertest": "^6.2.4",
+    "ts-jest": "^29.0.1",
     "ts-node-dev": "^2.0.0"
   }
 }
