--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,26 @@
-version: '3.8'
+version: "3.8"
 services:
-    api:
-        container_name: api
-        restart: always
-        build: .
-        ports:
-            - ${PORT}:${PORT}
-        depends_on:
-            - db
-        volumes:
-            - .:/usr/src/app
+  api:
+    container_name: api
+    restart: always
+    build: .
+    ports:
+      - 3001:3001
+    depends_on:
+      - db
+    volumes:
+      - .:/usr/src/app
 
-    db:
-        container_name: postgres
-        image: postgres
-        ports:
-            - '5432:${DB_PORT}'
-        volumes:
-            - data:/data/db
-        environment:
-            - POSTGRES_PASSWORD=${DB_PASSWORD}
-            - POSTGRES_DB=${DB_NAME}
+  db:
+    container_name: postgres
+    image: postgres
+    ports:
+      - 5432:5432
+    volumes:
+      - data:/data/db
+    environment:
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=postgres
 
 volumes:
-    data:
+  data: {}
