--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@types/body-parser": "^1.19.2",
     "@types/cors": "^2.8.12",
     "@types/dotenv": "^8.2.0",
-    "@types/express": "^4.17.13",
+    "@types/express": "^4.17.14",
     "@types/helmet": "^4.0.0",
     "@types/jest": "^29.0.2",
     "@types/jsonwebtoken": "^8.5.9",
@@ -38,8 +38,10 @@
     "@types/supertest": "^2.0.12",
     "dotenv": "^16.0.2",
     "jest": "^29.0.3",
+    "nodemon": "^2.0.19",
     "supertest": "^6.2.4",
     "ts-jest": "^29.0.1",
-    "ts-node-dev": "^2.0.0"
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.8.3"
   }
 }
